changed auth mode

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
       - "7777:8080"
     environment:
       FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
-      FOURSQUARE_CLIENT_SECRET: fsq3sSXLwSAJjTvuN2eg3ga1XERKHr581i97fdMYz3n7r+c=
+      FOURSQUARE_CLIENT_SECRET: WZUYLOJ1HKF0RYET033BMFL2MZECJI5GKSPR5EFZ035OZIVU
+      FOURSQUARE_API_TOKEN: RDVXAFVKQZMG3XCBIBX4PPKPIEFGRC2H3KDH3WSCRWDVCGN0
       OUTPUT_FORMAT: rss
       OUTPUT_FILE: /app/check_ins.xml
