gestione autenticazione oauth

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,12 @@ services:
   horde:
     build: .
     ports:
-      - "7777:8080"
+      ports: 
+      - "7777:8000" # Porta per il server di autenticazione 
+      - "7778:8080" # Porta per il server RSS
     environment:
       FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
       FOURSQUARE_CLIENT_SECRET: WZUYLOJ1HKF0RYET033BMFL2MZECJI5GKSPR5EFZ035OZIVU
-      FOURSQUARE_API_TOKEN: RDVXAFVKQZMG3XCBIBX4PPKPIEFGRC2H3KDH3WSCRWDVCGN0
+      API_TOKEN: fsq3OTMfijDsU2YgrO1fCVR2gPS7FiQxPJWE8l40kfAEo9o= ##SERVICE RDVXAFVKQZMG3XCBIBX4PPKPIEFGRC2H3KDH3WSCRWDVCGN0
       OUTPUT_FORMAT: rss
       OUTPUT_FILE: /app/check_ins.xml
