--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     environment:
       FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
       FOURSQUARE_CLIENT_SECRET: WZUYLOJ1HKF0RYET033BMFL2MZECJI5GKSPR5EFZ035OZIVU
-      REDIRECT_URI: http://localhost:7777/callback
+      REDIRECT_URI: https://reg.tanadelgigante.com/callback/
     volumes:
       - shared:/shared
 
