--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,20 @@
-#services:
-#  horde-auth:
-#    build: ./auth_server
-#    ports:
-##    ports:
-#      - "7777:8000" # Porta per il server di autenticazione 
-#    environment:
-#      FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
-##      FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
-#      FOURSQUARE_CLIENT_SECRET: WZUYLOJ1HKF0RYET033BMFL2MZECJI5GKSPR5EFZ035OZIVU
-#      API_TOKEN: fsq3OTMfijDsU2YgrO1fCVR2gPS7FiQxPJWE8l40kfAEo9o= ##SERVICE RDVXAFVKQZMG3XCBIBX4PPKPIEFGRC2H3KDH3WSCRWDVCGN0
-#      OUTPUT_FORMAT: rss
-##      OUTPUT_FORMAT: rss
-#      OUTPUT_FILE: /app/check_ins.xml
-      
 services:
   horde-auth:
+    container_name: horde-auth
     build:
       context: .
       dockerfile: Dockerfile.auth
     ports:
-      - "7777:8000"  # Porta per il server di autenticazione
+      - "7777:8000"  # Porta per il serAver di autenticazione
     environment:
       FOURSQUARE_CLIENT_ID: EFV05TO0CPVRBFKGMKLMIF1DSP5G5DNDAMCYST0NQIUSUQLA
       FOURSQUARE_CLIENT_SECRET: WZUYLOJ1HKF0RYET033BMFL2MZECJI5GKSPR5EFZ035OZIVU
       REDIRECT_URI: https://reg.tanadelgigante.com/callback/
     volumes:
-      - shared:/shared
+      - horde-data:/shared
 
   horde-rss:
+    container_name: horde-rss
     build:
       context: .
       dockerfile: Dockerfile.rss
@@ -36,10 +23,11 @@ services:
     environment:
       OUTPUT_FORMAT: rss
       OUTPUT_FILE: /app/check_ins.xml
+      SERVER_URL: http://dun-srv-app:7778
     volumes:
-      - shared:/shared
+      - horde-data:/shared
 
 volumes:
-  shared:
+  horde-data:
 
       
